wrote pcd processor using libpointmatcher

--- a/pcd_processor/CMakeLists.txt
+++ b/pcd_processor/CMakeLists.txt
@@ -3,44 +3,38 @@ project(pcd_processor)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
 
+find_package(libpointmatcher CONFIG)
+
 find_package(catkin REQUIRED COMPONENTS
   tf
   roscpp
   rospy
-  cv_bridge
-  image_transport
-
-  pcl_ros
-  pcl_conversions
-
   std_msgs
   sensor_msgs
   geometry_msgs
   nav_msgs
+  libpointmatcher
+  libpointmatcher_ros 
 )
-
-find_package(PCL REQUIRED QUIET)
-find_package(OpenCV REQUIRED QUIET)
 
 catkin_package(
   INCLUDE_DIRS include
-  CATKIN_DEPENDS
-  DEPENDS PCL
+)
+
+catkin_package (
+	CATKIN_DEPENDS libpointmatcher_ros
 )
 
 include_directories(
 	include
 	${catkin_INCLUDE_DIRS}
-	${PCL_INCLUDE_DIRS}
-	${OpenCV_INCLUDE_DIRS}
+	${libpointmatcher_INCLUDE_DIRS}
 )
 
 link_directories(
 	include
-	${OpenCV_LIBRARY_DIRS}
-	${PCL_LIBRARY_DIRS}
 )
 
 add_executable(pcd_processor src/pcd_processing_node.cpp)
 add_dependencies(pcd_processor ${catkin_EXPORTED_TARGETS})
-target_link_libraries(pcd_processor ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${OpenCV_LIBRARIES})
+target_link_libraries(pcd_processor ${catkin_LIBRARIES} ${libpointmatcher_LIBRARIES})
