--- a/pcd_processor/package.xml
+++ b/pcd_processor/package.xml
@@ -14,34 +14,30 @@
 
   <build_depend>roscpp</build_depend>
   <run_depend>roscpp</run_depend>
-  <build_depend>rospy</build_depend>
-  <run_depend>rospy</run_depend>
-  <build_depend>ros_bridge</build_depend>
-  <run_depend>ros_bridge</run_depend>
-  
+
   <build_depend>tf</build_depend>
   <run_depend>tf</run_depend>
-
-  <build_depend>pcl_ros</build_depend>
-  <run_depend>pcl_ros</run_depend>
-  <build_depend>pcl_conversions</build_depend>
-  <run_depend>pcl_conversions</run_depend>
 
   <build_depend>cv_bridge</build_depend>
   <run_depend>cv_bridge</run_depend>
 
   <build_depend>std_msgs</build_depend>
   <run_depend>std_msgs</run_depend>
-  <build_depend>cloud_msgs</build_depend>
-  <run_depend>cloud_msgs</run_depend>
+
   <build_depend>sensors_msgs</build_depend>
   <run_depend>sensors_msgs</run_depend>
+
   <build_depend>geometry_msgs</build_depend>
   <run_depend>geometry_msgs</run_depend>
+
   <build_depend>nav_msgs</build_depend>
   <run_depend>nav_msgs</run_depend>
 
-  <build_depend>image_transport</build_depend>
-  <run_depend>image_transport</run_depend>
+
+  <build_depend>libpointmatcher_ros</build_depend>
+  <run_depend>libpointmatcher_ros</run_depend>
+
+  <build_depend>libpointmatcher_ros</build_depend>
+  <run_depend>libpointmatcher_ros</run_depend>
 
 </package>
